[gd_scene load_steps=29 format=3 uid="uid://citgr4h7kjmw2"]

[ext_resource type="PackedScene" uid="uid://dolm0awkrgl7m" path="res://scenes/player.tscn" id="1"]
[ext_resource type="Script" uid="uid://djn41588oxs12" path="res://scripts/cave_world.gd" id="1_7vjiv"]
[ext_resource type="Texture2D" uid="uid://dd63kst26r5ds" path="res://assets/parallax_bg/paralax_bg_1_sky.png" id="3_q8u5g"]
[ext_resource type="Texture2D" uid="uid://bmn82hvqpj7sw" path="res://assets/parallax_bg/paralax_bg_2_smallClouds.png" id="4_lhr70"]
[ext_resource type="Script" uid="uid://dnjdjvavi217w" path="res://scripts/small_clouds.gd" id="4_wp0k4"]
[ext_resource type="Texture2D" uid="uid://bet4f50wgjens" path="res://assets/parallax_bg/paralax_bg_3_mountains.png" id="5_wp0k4"]
[ext_resource type="Texture2D" uid="uid://b12lox3xgffwy" path="res://assets/parallax_bg/paralax_bg_4_bigClouds.png" id="6_bjd11"]
[ext_resource type="Script" uid="uid://odaxpu7ubwei" path="res://scripts/big_clouds.gd" id="6_lhr70"]
[ext_resource type="Texture2D" uid="uid://du2iwna3rn7ak" path="res://assets/parallax_bg/paralax_bg_5_forest.png" id="7_qmy6f"]
[ext_resource type="Texture2D" uid="uid://d05y3myd7kinb" path="res://assets/parallax_bg/paralax_bg_6_farBushes.png" id="8_mwfav"]
[ext_resource type="Texture2D" uid="uid://bol37tybjqnvr" path="res://assets/parallax_bg/paralax_bg_7_nearBushes.png" id="9_3p2gp"]
[ext_resource type="Material" uid="uid://g2dorm25n1m5" path="res://shaders/wind_material.tres" id="10_1nqs0"]
[ext_resource type="PackedScene" uid="uid://jubqgarq03kq" path="res://scenes/fog_layer.tscn" id="12_bjd11"]
[ext_resource type="Shader" uid="uid://cq0tvmh3a0lof" path="res://shaders/god_rays.gdshader" id="13_qmy6f"]
[ext_resource type="TileSet" uid="uid://c863tgpflukmr" path="res://assets/tilesets/nature.tres" id="15_nfivy"]
[ext_resource type="PackedScene" uid="uid://dk5n7gglkk0k5" path="res://scenes/in_game_menu.tscn" id="17_7vjiv"]
[ext_resource type="PackedScene" uid="uid://i60btftcy6ji" path="res://scenes/HUD.tscn" id="17_ft6cd"]
[ext_resource type="Shader" uid="uid://dymhok6c0bfp3" path="res://shaders/pantheon_godrays.gdshader" id="18_arvd1"]
[ext_resource type="Shader" uid="uid://8wg2iwar8qby" path="res://shaders/pantheon_sky_stars.gdshader" id="18_gihd7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7vjiv"]
radius = 6.0
height = 24.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mwfav"]
shader = ExtResource("13_qmy6f")
shader_parameter/light_pos = Vector2(0.5, 0.2)
shader_parameter/decay = 0.95
shader_parameter/samples = 30
shader_parameter/weight = 0.5
shader_parameter/threshold = 0.6

[sub_resource type="CircleShape2D" id="CircleShape2D_w4nba"]
radius = 95.021

[sub_resource type="Gradient" id="Gradient_ojkti"]
offsets = PackedFloat32Array(0, 0.447368, 0.539474)
colors = PackedColorArray(0.0031, 0.151435, 0.31, 0, 1, 0.509333, 0.08, 1, 0.996078, 0.937255, 0.482353, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mbwdc"]
gradient = SubResource("Gradient_ojkti")
width = 30
height = 30
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xu6hb"]
shader = ExtResource("18_arvd1")
shader_parameter/gradient = SubResource("GradientTexture2D_mbwdc")
shader_parameter/spread = 2.34
shader_parameter/cutoff = 4.75
shader_parameter/size = 7.56
shader_parameter/speed = 3.4
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.3
shader_parameter/core_intensity = 2.0
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[sub_resource type="Gradient" id="Gradient_p75bh"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_in8h1"]
gradient = SubResource("Gradient_p75bh")
width = 128
height = 128

[sub_resource type="ShaderMaterial" id="ShaderMaterial_arvd1"]
shader = ExtResource("18_gihd7")
shader_parameter/bg_color = Vector4(0, 0, 0, 0)

[node name="Main" type="Node"]
script = ExtResource("1_7vjiv")

[node name="Player" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enabled = true

[node name="Player" parent="Player" instance=ExtResource("1")]
z_index = 2
position = Vector2(-1, -13)
max_speed = 100.0
virtual_floor_bit = 4
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="Player/Player"]
position = Vector2(0, -62)
limit_smoothed = true
position_smoothing_enabled = true
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0

[node name="CollisionShape2D_body2" type="CollisionShape2D" parent="Player/Player"]
position = Vector2(0, -12.525)
shape = SubResource("CapsuleShape2D_7vjiv")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-375, -973)
motion_scale = Vector2(0.1, 0.4)
motion_mirroring = Vector2(746, 0)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Sky"]
texture = ExtResource("3_q8u5g")
centered = false

[node name="SmallClouds" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-375, -973)
motion_scale = Vector2(0.15, 0.5)
motion_mirroring = Vector2(746, 0)
script = ExtResource("4_wp0k4")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/SmallClouds"]
texture = ExtResource("4_lhr70")
centered = false

[node name="Mountains" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-375, -973)
motion_scale = Vector2(0.2, 0.6)
motion_mirroring = Vector2(746, 0)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Mountains"]
texture = ExtResource("5_wp0k4")
centered = false

[node name="BigClouds" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-453, -1183)
motion_mirroring = Vector2(746, 0)
script = ExtResource("6_lhr70")
scroll_speed = Vector2(7, 0)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/BigClouds"]
position = Vector2(0, 396)
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_bjd11")
centered = false

[node name="Forest" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-375, -973)
motion_scale = Vector2(0.4, 0.7)
motion_mirroring = Vector2(746, 0)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Forest"]
material = ExtResource("10_1nqs0")
texture = ExtResource("7_qmy6f")
centered = false

[node name="FarBushes" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-375, -973)
motion_scale = Vector2(0.5, 0.8)
motion_mirroring = Vector2(746, 0)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/FarBushes"]
material = ExtResource("10_1nqs0")
texture = ExtResource("8_mwfav")
centered = false

[node name="NearBushes" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-375, -985)
motion_scale = Vector2(0.7, 0.9)
motion_mirroring = Vector2(746, 0)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/NearBushes"]
material = ExtResource("10_1nqs0")
texture = ExtResource("9_3p2gp")
centered = false

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
material = SubResource("ShaderMaterial_mwfav")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParallaxForeground" type="ParallaxBackground" parent="."]
layer = 1

[node name="BigClouds" type="ParallaxLayer" parent="ParallaxForeground"]
position = Vector2(-342, -1393)
motion_mirroring = Vector2(746, 0)
script = ExtResource("6_lhr70")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxForeground/BigClouds"]
texture = ExtResource("6_bjd11")
centered = false

[node name="Fog" type="ParallaxLayer" parent="ParallaxForeground"]
position = Vector2(-375, -138)
motion_mirroring = Vector2(746, 0)
metadata/_edit_group_ = true

[node name="FogLayer" parent="ParallaxForeground/Fog" instance=ExtResource("12_bjd11")]
texture_filter = 1
texture_repeat = 3

[node name="WorldMap" type="TileMapLayer" parent="."]
tile_set = ExtResource("15_nfivy")

[node name="HUD" parent="." instance=ExtResource("17_ft6cd")]
layer = 100

[node name="InGameMenu" type="CanvasLayer" parent="."]

[node name="InGameMenu" parent="InGameMenu" instance=ExtResource("17_7vjiv")]

[node name="Exit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_w4nba")

[node name="Orb" type="Sprite2D" parent="Exit"]
material = SubResource("ShaderMaterial_xu6hb")
position = Vector2(0, -13)
texture = SubResource("GradientTexture2D_in8h1")

[node name="ExitUI" type="PopupPanel" parent="."]
auto_translate_mode = 1
position = Vector2i(323, 124)
size = Vector2i(110, 50)
visible = true

[node name="Panel" type="Panel" parent="ExitUI"]
material = SubResource("ShaderMaterial_arvd1")
clip_contents = true
offset_left = 4.0
offset_top = 4.0
offset_right = 106.0
offset_bottom = 46.0

[node name="Label" type="Label" parent="ExitUI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "ВЫХОД ИЗ ПЕЩЕР
Нажмите E"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]
[connection signal="body_exited" from="Exit" to="." method="_on_exit_body_exited"]
